# dmp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  init_project.sh  setup_env.sh
.cursor/rules/: dmp-rule.mdc
cmake/: CompilerOptions.cmake  FindHyperscan.cmake  FindONNXRuntime.cmake
config/: features.yaml  logging.toml  models.toml  rules.json  server.toml
data/: blocklist.txt  whitelist.txt
docs/: DMP_CODE_ARCHITECTURE.md  PHASE1_CODE_DESIGN.md  PHASE1_FINAL_REPORT.md  claude_code_commands.md  cursor_primary_workflow.md  dmp-system-design.md  implementation_plan.md  init_project.md  背景需求.md
include/common/: config.hpp  types.hpp
include/core/: transaction.hpp
include/engine/: pattern_matcher.hpp  rule_engine.hpp
include/utils/: logger.hpp  metrics.hpp
scripts/: benchmark.py  build.sh  deploy.sh  macos_setup.sh  quick_test.sh  run_tests.sh  setup_and_build.sh  setup_dependencies.sh
src/: CMakeLists.txt  main.cpp
src/common/: config.cpp
src/core/: transaction.cpp
src/engine/: pattern_matcher.cpp  rule_engine.cpp
src/monitor/: metrics.cpp
src/server/: handlers.cpp  health.cpp
src/utils/: logger.cpp
tests/: CMakeLists.txt
